Adds URI support to AuthorizationCodeGrant (issue #79)